// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mark /> Renders correctly (pill false) 1`] = `
<span
  class="json-mark json-mark_number badge badge-json"
>
  test
</span>
`;

exports[`<Mark /> Renders correctly (pill true) 1`] = `
<span
  class="json-mark json-mark_number badge badge-json badge-pill"
>
  test
</span>
`;
